Fixed CSS issue in tool_diffusion where response_message long words break the container width

--- a/tools/tool_diffusion/css/tool_diffusion.less
+++ b/tools/tool_diffusion/css/tool_diffusion.less
@@ -120,6 +120,14 @@
 						.response_message {
 							padding: 1rem;
 							width: 100%;
+							overflow-wrap: break-word;
+							line-height: 1.1rem;
+
+							a {
+								padding-top: 0.5rem;
+								display: inline-block;
+								padding-bottom: 0.5rem;
+							}
 						}
 
 						.publication_button {
